fixed image size on mobile

--- a/sass/hyde.scss
+++ b/sass/hyde.scss
@@ -334,6 +334,7 @@ img {
   margin-right: auto;
   margin-top: 2rem;
   margin-bottom: 2rem;
+  width: 100%;
   max-width: 600px;
 }
 
